--- a/sandbox/pyproject.toml
+++ b/sandbox/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "python-sandbox"
+name = "sandbox"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
